--- a/cart/index.html
+++ b/cart/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/Tux-pizza/">
+    <meta http-equiv="refresh" content="0; url=/">
     <title>react-pizza-v2</title>
 </head>
 <body>
