--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styles/formBlock.css" />
     <link rel="stylesheet" href="/styles/question.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
+    <meta name="mailru-domain" content="Lb47Reuq1hGlk4ly" />
   </head>
   <body>
     <!-- header -->
@@ -246,4 +247,5 @@
     </main>
   </body>
 </html>
+
 
